fix logo z-index

--- a/src/components/TopLogo/index.module.css
+++ b/src/components/TopLogo/index.module.css
@@ -11,6 +11,7 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  z-index: var(--zIndex-logo);
 }
 
 .logo {
